test/fail/18-void_parameter_in_model_lambda.perk
model Test {
    let f := (a: void): void {
        skip
    }
}